webapp/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    run: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webapp
  type: LoadBalancer
